# gaussian-cnn-anomaly-detection

./: .gitignore  .travis.yml  README.md  main.py  original-main.py  pyproject.toml  requirements.txt
datasets/: mvtec.py
module/: model.py  mvtec.py  original_mvtec.py  tools.py
notebook/: how_to_use.ipynb
tests/: test_model.py  test_tools.py
