[tool.poetry]
name = "padim-anomaly-detection-localization-master"
version = "0.1.0"
description = ""
authors = ["Daisuke Takahashi <daisuke@hacarus.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.55.1"
certifi = "^2020.12.5"
torch = "1.4.0"
torchvision = "0.5.0"
scikit-image = "0.17.2"
scikit-learn = "0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"